--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "academicons": "^1.9.1",
     "bootstrap": "^5.0.2",
     "bootstrap-dark-4": "0.0.9",
     "citation-js": "^0.5.1",
